Fixes after feedback

--- a/oving1/CMakeLists.txt
+++ b/oving1/CMakeLists.txt
@@ -4,4 +4,5 @@ project(oving1)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")
 
-add_executable(oving1 task-a.cpp)
+add_executable(oving1 oppgave1.cpp)
+add_executable(oving1b oppgave2.cpp)
