--- a/oving2/CMakeLists.txt
+++ b/oving2/CMakeLists.txt
@@ -4,4 +4,7 @@ project(oving2)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra")
 
-add_executable(oving2 oppgave6.cpp)
+# add_executable(oving2 oppgave1.cpp)
+add_executable(oving2_4 oppgave4.cpp)
+# add_executable(oving2_5 oppgave5.cpp)
+# add_executable(oving2_6 oppgave6.cpp)
